--- a/src/main/webapp/coddingbattle.css
+++ b/src/main/webapp/coddingbattle.css
@@ -1,34 +1,73 @@
 /** Add css rules here for your application. */
 
-
 /** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+    font-size: 2em;
+    font-weight: bold;
+    color: #777777;
+    margin: 40px 0px 70px;
+    text-align: center;
+}
+
+body {
+    margin: 0;
+    padding: 0;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+    display: block;
+    font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+    width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+    margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+    color: red;
+}
+
+header {
+    text-align: center;
+    box-sizing: border-box;
+    width: 100%;
+    height: 50px;
+    background: black;
+}
+
+header ul {
+    text-transform: uppercase;
+    margin: 0 10px;
+    padding: 10px;
+    width: 100%;
+    list-style: none;
+}
+
+header ul:after {
+    clear: both;
+    content: '';
+    display: block;
+}
+
+header li {
+    margin: 0 40px;
+    float: right;
+    width: 14%;
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+}
+
+header li:hover {
+    background: silver;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+    margin: 15px 6px 6px;
 }
