--- a/src/main/webapp/coddingbattle.css
+++ b/src/main/webapp/coddingbattle.css
@@ -46,6 +46,7 @@ header {
 }
 
 header ul {
+    margin-left:0;
     text-transform: uppercase;
     margin: 0 10px;
     padding: 10px;
@@ -62,7 +63,7 @@ header ul:after {
 header li {
     margin: 0 40px;
     float: right;
-    width: 14%;
+    width: 12%;
     text-decoration: none;
     color: white;
     padding: 5px;
@@ -73,9 +74,15 @@ header li:hover {
     background: #464646;
 }
 #avatar {
-    width:40px;
-    height:40px;
-    background: url(../resources/img/user.svg);
+    width:30px;
+    height:30px;
+    border-radius: 50%;
+    margin-top: -4px;
+}
+header li img {
+    width:30px;
+    height:30px;
+    //background: url(../resources/img/user.svg);
 
 }
 #logo {
