--- a/src/main/webapp/coddingbattle.css
+++ b/src/main/webapp/coddingbattle.css
@@ -1,6 +1,7 @@
 /** Add css rules here for your application. */
 
 /** Example rules used by the template application (remove for your app) */
+
 body {
     font-family: sans-serif;
     background: #525252;
@@ -25,7 +26,33 @@ h1 {
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
+    padding:10px;
+    text-align: center;
+    color: white;
+    top: 49%;
+    left: 36%;
+    position: absolute;
+    border: 2px solid white;
+    background: #525252;
     width: 400px;
+    height: 400px;
+}
+
+.gwt-DialogBox textarea {
+    padding: 5px;
+    border-radius: 5px;
+    display: block;
+    margin: 10px auto;
+}
+
+.gwt-DialogBox button{
+    font-size:inherit;
+    padding:inherit;
+    background: #2d2d2d;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    text-transform: uppercase;
 }
 
 .dialogVPanel {
@@ -59,7 +86,7 @@ header ul:after {
     display: block;
 }
 
-header li  {
+header li {
     margin: 0 40px;
     float: right;
     width: 12%;
@@ -71,7 +98,7 @@ header li  {
 
 header li button {
     background: inherit;
-    width:100%;
+    width: 100%;
     border: 0;
     color: white;
     padding: 5px;
@@ -95,13 +122,15 @@ header li img {
     width: 30px;
     height: 30px;
 }
+
 #banner {
-    width:70%;
+    width: 70%;
     margin: auto;
 }
+
 #banner img {
-    width:100%;
-    opacity:0.5;
+    width: 100%;
+    opacity: 0.5;
 }
 
 #logo {
