--- a/src/main/webapp/coddingbattle.css
+++ b/src/main/webapp/coddingbattle.css
@@ -42,8 +42,9 @@ h1 {
 }
 
 .gwt-DialogBox button {
+    margin:10px auto;
     font-size: inherit;
-    padding: inherit;
+    padding: 10px;
     background: #2d2d2d;
     color: white;
     border: 0;
