--- a/src/main/webapp/coddingbattle.css
+++ b/src/main/webapp/coddingbattle.css
@@ -9,6 +9,10 @@ body {
     font-family: 'Comfortaa', cursive;;
 }
 
+li {
+    list-style: none;
+}
+
 h1 {
     font-size: 2em;
     font-weight: bold;
@@ -25,7 +29,7 @@ h1 {
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-    margin:0 auto;
+    margin: 0 auto;
     padding: 10px;
     text-align: center;
     color: white;
@@ -42,7 +46,7 @@ h1 {
 }
 
 .gwt-DialogBox button {
-    margin:10px auto;
+    margin: 10px;
     font-size: inherit;
     padding: 10px;
     background: #2d2d2d;
@@ -69,7 +73,6 @@ header {
 }
 
 header ul {
-    margin-left: 0;
     text-transform: uppercase;
     margin: 0 10px;
     padding: 10px;
@@ -126,7 +129,8 @@ header li img {
 }
 
 #banner img {
-    width: 100%;
+    max-width: 100%;
+    height: auto;
     opacity: 0.5;
 }
 
@@ -137,4 +141,29 @@ header li img {
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
     margin: 15px 6px 6px;
+}
+
+#user {
+    width: 70%;
+    margin: 10px auto;
+}
+
+#user img {
+    padding: 10px;
+    border-radius: 50%;
+    border: 1px solid white;
+    display: block;
+    margin: auto;
+    overflow: hidden;
+    width: 15%;
+    height: auto;
+}
+
+#user li {
+    text-align: center;
+    padding: 10px;
+    border: 1px solid white;
+    margin: 2%;
+    width: 27%;
+    float: left;
 }
